--- a/Colab/Lab1/lab01.ipynb
+++ b/Colab/Lab1/lab01.ipynb
@@ -77,7 +77,7 @@
         "id": "6naxyUrBGrEm"
       },
       "source": [
-        "**Question 1.** This paragraph is in its own text cell. Try editing it by adding your name at the end of the last sentence. Does your name appear correctly? If not, try formatting it using Markdown syntax or the Google Colab formatting options."
+        "**Question 1.** This paragraph is in its own text cell. Try editing it by adding your name at the end of the last sentence. Does your name appear correctly? If not, try formatting it using Markdown syntax or the Google Colab formatting options. Jorge Torres"
       ]
     },
     {
