--- a/Colab/Lab1/lab01.ipynb
+++ b/Colab/Lab1/lab01.ipynb
@@ -96,10 +96,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "id": "JseZugl7GrEm",
-        "outputId": "7ae97485-d96a-467a-d73c-59a2cad02b3d",
+        "outputId": "e0be902d-6e07-46e3-f8ea-7678e358d53c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -128,10 +128,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "id": "wJvNtU12GrEn",
-        "outputId": "1d7ad682-fdec-4c2d-ebcf-2e5817971f19",
+        "outputId": "c7419edc-7a9b-411e-ef2c-b2c597e337e3",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -160,10 +160,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "id": "cmzclMvOGrEn",
-        "outputId": "21a8eb2f-a37e-44c1-fb65-3eccb8830874",
+        "outputId": "b55e9f5a-84d4-4c4b-86ca-9653682fb0ff",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -173,13 +173,15 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "First this line is printed,\n",
+            "First this line,\n",
+            "then the whold world,\n",
             "and then this one.\n"
           ]
         }
       ],
       "source": [
-        "print(\"First this line is printed,\")\n",
+        "print(\"First this line,\")\n",
+        "print(\"then the whold world,\")\n",
         "print(\"and then this one.\")"
       ]
     },
@@ -224,6 +226,29 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "print(\"A whole new cell!\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "G0bCRupP8BUk",
+        "outputId": "8f4a937f-4083-4c4c-fe7a-d4c20f3cc060"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "A whole new cell!\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "JElsmxDeGrEo"
@@ -243,27 +268,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
         "id": "yB245C2aGrEo",
-        "outputId": "6938c61b-7b7c-4af0-8d94-702602f6ab01",
+        "outputId": "e72eb7f1-1755-4730-c5ef-97cfc1e5888e",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 102
+          "base_uri": "https://localhost:8080/"
         }
       },
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "incomplete input (ipython-input-1867411798.py, line 1)",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"/tmp/ipython-input-1867411798.py\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    print(\"This line is missing something.\"\u001b[0m\n\u001b[0m                                           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m incomplete input\n"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "This line is missing something.\n"
           ]
         }
       ],
       "source": [
-        "print(\"This line is missing something.\""
+        "print(\"This line is missing something.\")"
       ]
     },
     {
@@ -1382,8 +1405,7 @@
   "metadata": {
     "anaconda-cloud": {},
     "kernelspec": {
-      "display_name": "Python 3 (ipykernel)",
-      "language": "python",
+      "display_name": "Python 3",
       "name": "python3"
     },
     "language_info": {
@@ -1399,7 +1421,8 @@
       "version": "3.12.5"
     },
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "generative_ai_disabled": true
     }
   },
   "nbformat": 4,
