--- a/Colab/Lab1/lab01.ipynb
+++ b/Colab/Lab1/lab01.ipynb
@@ -96,10 +96,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 11,
       "metadata": {
         "id": "JseZugl7GrEm",
-        "outputId": "e0be902d-6e07-46e3-f8ea-7678e358d53c",
+        "outputId": "c93bc6a3-2630-456c-94e1-e8abadb4e367",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -128,10 +128,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 12,
       "metadata": {
         "id": "wJvNtU12GrEn",
-        "outputId": "c7419edc-7a9b-411e-ef2c-b2c597e337e3",
+        "outputId": "20b1840a-2345-4103-b562-fc758ed0cc5f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -160,10 +160,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 13,
       "metadata": {
         "id": "cmzclMvOGrEn",
-        "outputId": "b55e9f5a-84d4-4c4b-86ca-9653682fb0ff",
+        "outputId": "3d23c0c0-76ab-4806-df78-372aa55320d4",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -235,9 +235,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "G0bCRupP8BUk",
-        "outputId": "8f4a937f-4083-4c4c-fe7a-d4c20f3cc060"
+        "outputId": "86dc36cd-9713-43e6-8269-3d6172deb548"
       },
-      "execution_count": 9,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -268,10 +268,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 15,
       "metadata": {
         "id": "yB245C2aGrEo",
-        "outputId": "e72eb7f1-1755-4730-c5ef-97cfc1e5888e",
+        "outputId": "4f46e01d-1bb7-4531-d7df-9975f1effec4",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -349,11 +349,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "metadata": {
-        "id": "VE854TjqGrEp"
+        "id": "VE854TjqGrEp",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "79aa526b-2d7d-490b-dcfc-743cf71f93d2"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3.25"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 16
+        }
+      ],
       "source": [
         "3.2500"
       ]
@@ -369,15 +384,38 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 33,
       "metadata": {
         "scrolled": true,
-        "id": "CLBRKLkxGrEq"
+        "id": "CLBRKLkxGrEq",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "82de7e1f-c2e4-40ac-b984-edf75f84fc93"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2\n",
+            "3\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "4"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 33
+        }
+      ],
       "source": [
         "print(2)\n",
-        "3\n",
+        "print(3)\n",
         "4"
       ]
     },
@@ -404,11 +442,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "metadata": {
-        "id": "xZaUoTtUGrEq"
+        "id": "xZaUoTtUGrEq",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ce43aa4a-1334-4be0-df10-c43b5196ede0"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1.75"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 18
+        }
+      ],
       "source": [
         "3.25 - 1.5"
       ]
@@ -426,22 +479,52 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "metadata": {
-        "id": "fMgwg3GsGrEq"
+        "id": "fMgwg3GsGrEq",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "6578ab0d-9b9d-4b42-f7ac-83141abda022"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "-725.0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 19
+        }
+      ],
       "source": [
         "1+6*5-6*3**2*2**3/4*7"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "metadata": {
-        "id": "-BsaNFxLGrEq"
+        "id": "-BsaNFxLGrEq",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "29274ba9-3a5f-4dad-dd24-875bbc5dcf30"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2017.0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 20
+        }
+      ],
       "source": [
         "1+(6*5-(6*3))**2*((2**3)/4*7)"
       ]
@@ -467,13 +550,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 34,
       "metadata": {
-        "id": "itSycQNlGrEr"
+        "id": "itSycQNlGrEr",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "0cdbefc6-b5a5-46ac-edb2-826d401710fb"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1999.151515151515"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 34
+        }
+      ],
       "source": [
-        "..."
+        "5*(3/11)-50+(2**(.5*22))-(7/33)"
       ]
     },
     {
@@ -492,7 +590,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "metadata": {
         "id": "H-_GCWt9GrEr"
       },
@@ -514,11 +612,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 23,
       "metadata": {
-        "id": "SpsTHG48GrEr"
+        "id": "SpsTHG48GrEr",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "64ca3241-920b-476b-e305-877ba14ac539"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "10"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 23
+        }
+      ],
       "source": [
         "ten"
       ]
@@ -544,16 +657,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 36,
       "metadata": {
         "collapsed": true,
         "jupyter": {
           "outputs_hidden": true
         },
-        "id": "S1YDjnSKGrEr"
+        "id": "S1YDjnSKGrEr",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "4d0fa59c-084a-4c98-e86d-588de2c43959"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "11\n"
+          ]
+        }
+      ],
+      "source": [
+        "eleven = 11\n",
+        "print(eleven)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -566,10 +694,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 24,
       "metadata": {
         "id": "VC_lpa-uGrEr",
-        "outputId": "b05a4995-ae2a-46ea-ec99-fcb3b626260e",
+        "outputId": "f1b611f8-4aa3-4937-b3ed-b011e97fc472",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -583,7 +711,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 24
         }
       ],
       "source": [
@@ -602,10 +730,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 25,
       "metadata": {
         "id": "uJLyukWgGrEr",
-        "outputId": "88f03e9f-fd83-4cb0-d9ab-ec8e63932633",
+        "outputId": "3ffc32dd-e8d1-45d1-819d-59d9b5b3fa2d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -619,7 +747,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 25
         }
       ],
       "source": [
@@ -643,10 +771,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 26,
       "metadata": {
         "id": "MRAZCVzvGrEs",
-        "outputId": "71a5d638-aabb-4dd8-b5f2-d51d07336380",
+        "outputId": "a38309ac-9c8b-4cfe-d160-a9007e1b214a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -660,7 +788,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 26
         }
       ],
       "source": [
@@ -691,10 +819,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 37,
       "metadata": {
         "id": "pCiQLYykGrEs",
-        "outputId": "788ed25d-2cad-4ccf-ed39-f8ff6d082cb6",
+        "outputId": "f0054677-91f7-4403-a807-b189c3896415",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -704,18 +832,18 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "Ellipsis"
+              "315532800"
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 37
         }
       ],
       "source": [
         "# Change the next line so that it computes the number of\n",
         "# seconds in a decade and assigns that number the name\n",
         "# seconds_in_a_decade.\n",
-        "seconds_in_a_decade = ...\n",
+        "seconds_in_a_decade = 60*60*24*365*8 + 60*60*24*366*2\n",
         "\n",
         "# We've put this line in this cell so that it will print\n",
         "# the value you've given to seconds_in_a_decade when you\n",
@@ -761,10 +889,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 38,
       "metadata": {
         "id": "bajisa6-GrEt",
-        "outputId": "30917a4c-a0c7-49de-8ef5-17bc71304f23",
+        "outputId": "3594fdc1-f9c0-4015-aec7-d1001a3fc4b6",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -774,15 +902,15 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "Ellipsis"
+              "0.4566666666666667"
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 38
         }
       ],
       "source": [
-        "average_turnout = ...\n",
+        "average_turnout = (.4+.45+.52)/3\n",
         "average_turnout"
       ]
     },
@@ -797,10 +925,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 39,
       "metadata": {
         "id": "KVtVpdHuGrEt",
-        "outputId": "741fd741-43e3-43ad-9402-9f697381ae8e",
+        "outputId": "f422efeb-723c-43b0-8c8c-30b48c372d1d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -810,15 +938,15 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "Ellipsis"
+              "6633.996666666668"
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 39
         }
       ],
       "source": [
-        "expected_turnout = ...\n",
+        "expected_turnout = average_turnout*14527\n",
         "expected_turnout"
       ]
     },
@@ -855,10 +983,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 30,
       "metadata": {
         "id": "669F_5VBGrEt",
-        "outputId": "f8749eec-0f07-441c-940d-a2e25b001178",
+        "outputId": "d45e36c9-18ca-4064-9d52-9b622ca89f96",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -872,7 +1000,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 11
+          "execution_count": 30
         }
       ],
       "source": [
@@ -881,10 +1009,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 31,
       "metadata": {
         "id": "J-W1gyq_GrEt",
-        "outputId": "f956fc4a-f3f7-4eb1-fbb6-762be3e0f892",
+        "outputId": "c6ae75ab-bbbe-48e1-c0ef-91c6f03a098e",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -898,7 +1026,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 12
+          "execution_count": 31
         }
       ],
       "source": [
@@ -925,17 +1053,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 32,
       "metadata": {
         "collapsed": true,
         "jupyter": {
           "outputs_hidden": true
         },
         "id": "H3TMkAocGrEt",
-        "outputId": "e1b9879b-49d0-4cd3-acdd-7f41cf3f7f01",
+        "outputId": "c60b63a4-c594-4c0e-c1cf-4e02f7621e17",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 201
+          "height": 216
         }
       },
       "outputs": [
@@ -1300,106 +1428,10 @@
         "files.download(output_path)\n"
       ],
       "metadata": {
-        "id": "xze1uhAuIesF",
-        "outputId": "3644e062-f94f-4f36-a84e-d90fb15e2ea1",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 365
-        }
+        "id": "xze1uhAuIesF"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "W: Skipping acquire of configured file 'main/source/Sources' as repository 'https://r2u.stat.illinois.edu/ubuntu jammy InRelease' does not seem to provide it (sources.list entry misspelt?)\n",
-            "Reading package lists... Done\n",
-            "Building dependency tree... Done\n",
-            "Reading state information... Done\n",
-            "pandoc is already the newest version (2.9.2.1-3ubuntu2).\n",
-            "texlive-fonts-recommended is already the newest version (2021.20220204-1).\n",
-            "texlive-plain-generic is already the newest version (2021.20220204-1).\n",
-            "texlive-xetex is already the newest version (2021.20220204-1).\n",
-            "0 upgraded, 0 newly installed, 0 to remove and 37 not upgraded.\n",
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n",
-            "Enter your notebook’s exact file name,\n",
-            "exactly as shown in the top-left corner of the Colab page (next to the two yellow circle icons): lab01.ipynb\n",
-            "[NbConvertApp] Converting notebook /content/drive/MyDrive/Colab Notebooks/lab01.ipynb to pdf\n",
-            "[NbConvertApp] Writing 60794 bytes to notebook.tex\n",
-            "[NbConvertApp] Building PDF\n",
-            "[NbConvertApp] Running xelatex 3 times: ['xelatex', 'notebook.tex', '-quiet']\n",
-            "[NbConvertApp] Running bibtex 1 time: ['bibtex', 'notebook']\n",
-            "[NbConvertApp] WARNING | bibtex had problems, most likely because there were no citations\n",
-            "[NbConvertApp] PDF successfully created\n",
-            "[NbConvertApp] Writing 90168 bytes to /content/drive/MyDrive/Colab Notebooks/lab01.pdf\n"
-          ]
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "<IPython.core.display.Javascript object>"
-            ],
-            "application/javascript": [
-              "\n",
-              "    async function download(id, filename, size) {\n",
-              "      if (!google.colab.kernel.accessAllowed) {\n",
-              "        return;\n",
-              "      }\n",
-              "      const div = document.createElement('div');\n",
-              "      const label = document.createElement('label');\n",
-              "      label.textContent = `Downloading \"${filename}\": `;\n",
-              "      div.appendChild(label);\n",
-              "      const progress = document.createElement('progress');\n",
-              "      progress.max = size;\n",
-              "      div.appendChild(progress);\n",
-              "      document.body.appendChild(div);\n",
-              "\n",
-              "      const buffers = [];\n",
-              "      let downloaded = 0;\n",
-              "\n",
-              "      const channel = await google.colab.kernel.comms.open(id);\n",
-              "      // Send a message to notify the kernel that we're ready.\n",
-              "      channel.send({})\n",
-              "\n",
-              "      for await (const message of channel.messages) {\n",
-              "        // Send a message to notify the kernel that we're ready.\n",
-              "        channel.send({})\n",
-              "        if (message.buffers) {\n",
-              "          for (const buffer of message.buffers) {\n",
-              "            buffers.push(buffer);\n",
-              "            downloaded += buffer.byteLength;\n",
-              "            progress.value = downloaded;\n",
-              "          }\n",
-              "        }\n",
-              "      }\n",
-              "      const blob = new Blob(buffers, {type: 'application/binary'});\n",
-              "      const a = document.createElement('a');\n",
-              "      a.href = window.URL.createObjectURL(blob);\n",
-              "      a.download = filename;\n",
-              "      div.appendChild(a);\n",
-              "      a.click();\n",
-              "      div.remove();\n",
-              "    }\n",
-              "  "
-            ]
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "<IPython.core.display.Javascript object>"
-            ],
-            "application/javascript": [
-              "download(\"download_94a14043-5cea-4060-a627-be4115f966b2\", \"lab01.pdf\", 90168)"
-            ]
-          },
-          "metadata": {}
-        }
-      ]
+      "outputs": []
     }
   ],
   "metadata": {
