--- a/Colab/Lab1/lab01.ipynb
+++ b/Colab/Lab1/lab01.ipynb
@@ -925,10 +925,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": 40,
       "metadata": {
         "id": "KVtVpdHuGrEt",
-        "outputId": "f422efeb-723c-43b0-8c8c-30b48c372d1d",
+        "outputId": "ddcbeceb-53f8-4b84-c7b6-f2779a1a4e8b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -938,15 +938,15 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "6633.996666666668"
+              "6634"
             ]
           },
           "metadata": {},
-          "execution_count": 39
+          "execution_count": 40
         }
       ],
       "source": [
-        "expected_turnout = average_turnout*14527\n",
+        "expected_turnout = round(average_turnout*14527)\n",
         "expected_turnout"
       ]
     },
@@ -965,7 +965,34 @@
         "id": "HjMQbPxhGrEt"
       },
       "source": [
-        "**Enter your answer by double-clicking on this block. Delete this text and replace it with your answer.**"
+        "Based on what we know - that our expected voter turnout is 6,634 people, and that we need just above half of those people to vote for us in order to win, we'd expect that we need the following value of votes in order to win."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "expected_needed_to_win = expected_turnout/2+1\n",
+        "expected_needed_to_win"
+      ],
+      "metadata": {
+        "id": "Rknk4zoW-ulI",
+        "outputId": "997b4866-e8a5-412d-b001-290af0fd006f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3318.0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 42
+        }
       ]
     },
     {
@@ -1053,30 +1080,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 43,
       "metadata": {
         "collapsed": true,
         "jupyter": {
           "outputs_hidden": true
         },
         "id": "H3TMkAocGrEt",
-        "outputId": "c60b63a4-c594-4c0e-c1cf-4e02f7621e17",
+        "outputId": "feb9e71f-f71f-49e3-8127-5de8c74ae3a8",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 216
+          "base_uri": "https://localhost:8080/"
         }
       },
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "TypeError",
-          "evalue": "unsupported operand type(s) for *: 'int' and 'ellipsis'",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m/tmp/ipython-input-3107696895.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;31m# Now we compute the total distance Chunhua must walk.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m \u001b[0mmanhattan_distance\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstreet_length_m\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mnum_streets_away\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mavenue_length_m\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mnum_avenues_away\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0;31m# We've included this line so that you see the distance\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for *: 'int' and 'ellipsis'"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1462"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 43
         }
       ],
       "source": [
@@ -1084,7 +1109,7 @@
         "num_streets_away = abs(42-34)\n",
         "\n",
         "# Compute the number of avenues away in a similar way:\n",
-        "num_avenues_away = ...\n",
+        "num_avenues_away = abs(7-10)\n",
         "\n",
         "street_length_m = 80\n",
         "avenue_length_m = 274\n",
@@ -1110,11 +1135,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 44,
       "metadata": {
-        "id": "eYKGQOxMGrEu"
+        "id": "eYKGQOxMGrEu",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f3b2ae62-b02a-4e92-9e68-751b421a4bc5"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "4"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 44
+        }
+      ],
       "source": [
         "max(2, -3, 4, -5)"
       ]
@@ -1145,15 +1185,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 45,
       "metadata": {
         "collapsed": true,
         "jupyter": {
           "outputs_hidden": true
         },
-        "id": "B5bUXjUtGrEu"
+        "id": "B5bUXjUtGrEu",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "b7fa6635-4196-4614-ffbb-800859343468"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.478"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 45
+        }
+      ],
       "source": [
         "abs(1.21 - 1.688)"
       ]
@@ -1188,15 +1243,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 46,
       "metadata": {
         "collapsed": true,
         "jupyter": {
           "outputs_hidden": true
         },
-        "id": "LL4I_2_2GrEu"
+        "id": "LL4I_2_2GrEu",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "8dd7043b-f223-4507-8770-0d645a98dc02"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Ellipsis"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 46
+        }
+      ],
       "source": [
         "# Replace the ... with an expression to compute the absolute\n",
         "# value of the difference between Botan's height (1.85m) and\n",
